@@ -4,7 +4,6 @@ import com.opencsv.bean.CsvToBean;
 import com.opencsv.bean.CsvToBeanBuilder;
 import edu.handong.csee.histudy.domain.Choice;
 import edu.handong.csee.histudy.domain.Course;
-import edu.handong.csee.histudy.domain.Team;
 import edu.handong.csee.histudy.domain.User;
 import edu.handong.csee.histudy.dto.CourseDto;
 import edu.handong.csee.histudy.dto.CourseIdDto;
@@ -13,6 +12,7 @@ import edu.handong.csee.histudy.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.io.input.BOMInputStream;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
@@ -20,7 +20,7 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -76,12 +76,23 @@ public class CourseService {
                 .toList();
     }
 
-    public List<CourseDto.Info> getTeamCourses(String accessToken) {
-        User user = userRepository.findUserByAccessToken(accessToken).orElseThrow();
-        Team team = user.getTeam();
-        List<User> users = team.getUsers();
-        Set<Course> courses = users.stream().flatMap(u -> u.getChoices().stream().map(Choice::getCourse)).collect(Collectors.toSet());
-        return courses.stream().map(Course::toDto).collect(Collectors.toList());
+    public List<CourseDto.Info> getTeamCourses(String email) {
+        List<Long> courseIds = userRepository.findUserByEmail(email).stream()
+                .map(User::getTeam)
+                .flatMap(t -> t.getUsers().stream())
+                .flatMap(u -> u.getChoices().stream())
+                .map(Choice::getCourse)
+                .collect(Collectors.groupingBy(Course::getId, Collectors.counting()))
+                .entrySet()
+                .stream()
+                .filter(e -> e.getValue() >= 2)
+                .map(Map.Entry::getKey)
+                .toList();
+
+        return courseRepository.findAllById(courseIds)
+                .stream()
+                .map(CourseDto.Info::new)
+                .toList();
     }
 
     public int deleteCourse(CourseIdDto dto) {
